[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/CG/darkness.png" type="Texture" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Yukari.tscn" type="PackedScene" id=3]
[ext_resource path="res://LevelExtra.gd" type="Script" id=4]
[ext_resource path="res://bgm/youmu_loop.ogg" type="AudioStream" id=5]

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 641, 360 )
b = Vector2( 639, 0 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 66, 339 )
b = Vector2( 709, 339 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 80, 339 )
b = Vector2( 723, 339 )

[node name="LevelExtra" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.508594, 0.515278 )
texture = ExtResource( 1 )
centered = false

[node name="Yukari" parent="." instance=ExtResource( 3 )]
position = Vector2( 304, 176 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 287, 326 )
__meta__ = {
"_edit_group_": true
}

[node name="Border" type="StaticBody2D" parent="."]

[node name="Right" type="CollisionShape2D" parent="Border"]
shape = SubResource( 2 )

[node name="Down" type="CollisionShape2D" parent="Border"]
position = Vector2( -67, 21 )
shape = SubResource( 4 )

[node name="Up" type="CollisionShape2D" parent="Border"]
position = Vector2( -82, -316 )
shape = SubResource( 3 )

[node name="Left" type="CollisionShape2D" parent="Border"]
position = Vector2( -617, 0 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -2.0

[connection signal="dead" from="Yukari" to="." method="_on_Fairy_dead"]
[connection signal="shoot" from="Yukari" to="." method="_on_Fairy_shoot"]
[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]
